# archivist

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: checks.yml  tests.yml
archivist_archive/: Cargo.toml
archivist_bz2/: Cargo.toml
archivist_compress/: Cargo.toml  build.rs
archivist_compress/src/: lib.rs  logic.rs  sub_commands.rs
archivist_gz/: Cargo.toml
archivist_hash/: Cargo.toml
archivist_hash/src/: lib.rs
archivist_pgp/: Cargo.toml
archivist_scan/: Cargo.toml
archivist_tar/: Cargo.toml
archivist_tui/: Cargo.toml
archivist_xz/: Cargo.toml
archivist_zip/: Cargo.toml
ci/: script.sh
src/: main.rs
the_archivist/: Cargo.toml
