[package]
name = "archivist"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[[bin]]
path = "src/main.rs"
name = "acv"

[workspace]
members = [
    "archivist_archive",
    "archivist_compress",
    "archivist_hash",
    "archivist_tui",
]

[dependencies]
clap = "2"

[dev-dependencies]
[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
    "run-for-all",
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-clippy",
    "run-cargo-fmt",
]