[package]
name = "archivist"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[[bin]]
path = "src/main.rs"
name = "acv"

[workspace]
members = [
    "archivist_archive",
    "archivist_compress",
    "archivist_hash",
    "archivist_pgp",
    "archivist_scan",
    "archivist_tui",
]

[dependencies]
archivist_compress = { path = "archivist_compress" }
clap = "2"
toml = "0.5"

[dependencies.serde]
version = "1"
features = [ "derive" ]

[dev-dependencies]
[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
    "run-for-all",
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-clippy",
    "run-cargo-fmt",
]