[package]
name = "archivist_hash"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.8"
md-5 = "0.8"
ripemd160 = "0.8"
sha-1 = "0.8"
sha2 = "0.8"
sha3 = "0.8"